--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ pandas = "^1.4.2"
 ipykernel = "^6.12.1"
 matplotlib = "^3.5.1"
 sklearn = "^0.0"
+black = "^22.3.0"
 
 [tool.poetry.dev-dependencies]
 
